--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,6 @@
     "allowSyntheticDefaultImports": true,  /* Allow default imports from modules with no default export. This does not affect code emit, just typechecking. */
     "esModuleInterop": true                   /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */
   },
-  "include": ["./src/**/*.ts"],
-  "exclude": ["node_modules", "**/*.test.ts", "./src/__tests__/testfiles/*"],
+  "include": ["src"],
+  "exclude": ["node_modules", "**/__tests__"],
 }
