--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
     /* Basic Options */
     "target": "ES2015",                          /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', 'ES2018', 'ES2019' or 'ESNEXT'. */
     "module": "commonjs",                     /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */
-    "outDir": "./dist",                        /* Redirect output structure to the directory. */
+    "outDir": "./dist",  
+    "sourceMap": true,                      /* Redirect output structure to the directory. */
 
     /* Strict Type-Checking Options */
     "strict": true,                           /* Enable all strict type-checking options. */
