--- a/.travis.yml
+++ b/.travis.yml
@@ -11,13 +11,20 @@ node_js:
 install:
   - yarn
   - yarn add codecov
+
 jobs:
-  include:
-    - stage: test
-    script: yarn prettier --check './{src,__mocks__}/**'
-    script: yarn eslint './{src,__mocks__}/**'
-    script: yarn jest --coverage
-    script: yarn build
+include:
+  - stage: test
+    name: "Prettier/Lint/Test"
+    script:
+      - yarn prettier --check './{src,__mocks__}/**'
+      - yarn eslint './{src,__mocks__}/**'
+      - yarn jest --coverage
+  - stage: test
+    - stage: build
+      name: "Build"
+      script:
+        - yarn build
 after_success:
   - yarn codecov
 
