change prepublish to prepare

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "test": "jest",
     "build": "tsc",
-    "prepublish": "tsc",
+    "prepare": "tsc",
     "ts-incremental-strict-mode": "ts-node src/main.ts"
   },
   "author": "Riku Mäntysalo",
