--- a/package.json
+++ b/package.json
@@ -42,6 +42,9 @@
     "tempy": "^0.3.0",
     "yargs": "^14.2.0"
   },
+  "peerDependencies": {
+    "typescript": "3.x"
+  },
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged",
