--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -24,7 +24,7 @@ jobs:
         yarn jest --coverage
         yarn build
     - name: send codecov report
-      if: matrix.node-version = 12
+      if: matrix.node-version == 12
       run: |
         yarn add codecov
         yarn codecov
